[tool.poetry]
name = "invest_api"
version = "0.0.1"
description = ""
authors = ["Gleb Karpushkin <rugleb@gmail.com>"]
readme = "README.md"
homepage = ""
repository = ""
documentation = ""

[tool.poetry.urls]
git = ""
ci = ""
issues = ""

[tool.poetry.dependencies]
python = "^3.7"
aiodns = "^2.0.0"
aiohttp = "^3.6.2"
attrs = "^19.3.0"
brotlipy = "^0.7.0"
cchardet = "^2.1.5"
environs = "^7.4.0"
gunicorn = "^20.0.4"
marshmallow = "^3.6.0"
uvloop = "^0.14.0"
yarl = "^1.4.2"
ujson = "^2.0.3"

[tool.poetry.dev-dependencies]
bandit = "^1.6.2"
cobertura_clover_transform = "^1.1.4"
coverage = "^5.1.0"
flake8 = "^3.8.1"
isort = "^4.3.21"
mypy = "^0.761"
pylint = "~2.4.4"
pytest = "~5.3.5"
unittest_xml_reporting = "^3.0.2"

[build-system]
requires = ["poetry>=1.0.5"]
build-backend = "poetry.masonry.api"
