[tool.poetry]
name = "invest_api"
version = "0.0.1"
description = ""
authors = ["Gleb Karpushkin <rugleb@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/rugleb/invest_api"
repository = ""
documentation = "https://github.com/rugleb/invest_api/blob/master/README.md"

[tool.poetry.urls]
git = "https://github.com/rugleb/invest_api"
ci = "https://travis-ci.com/rugleb/invest_api"
issues = "https://github.com/rugleb/invest_api/issues"

[tool.poetry.dependencies]
python = "^3.7"
aiodns = "^2.0.0"
aiohttp = "^3.6.2"
attrs = "^19.3.0"
brotlipy = "^0.7.0"
cchardet = "^2.1.5"
environs = "^7.4.0"
gunicorn = "^20.0.4"
marshmallow = "^3.6.0"
uvloop = "^0.14.0"
yarl = "^1.4.2"
orjson = "^3.0.0"
codecov = "^2.0.22"
asyncpg = "^0.20.1"
sqlalchemy = "^1.3.16"
psycopg2-binary = "^2.8.5"

[tool.poetry.dev-dependencies]
bandit = "^1.6.2"
cobertura_clover_transform = "^1.1.4"
coverage = "^5.1.0"
flake8 = "^3.8.1"
isort = "^4.3.21"
mypy = "^0.761"
pylint = "~2.4.4"
pytest = "~5.3.5"
unittest_xml_reporting = "^3.0.2"
docker = "^4.2.0"

[build-system]
requires = ["poetry>=1.0.5"]
build-backend = "poetry.masonry.api"
